# cmake-find-module-config-example

./: README.md
bar/: CMakeLists.txt  bar.cpp
foo/: CMakeLists.txt  foo.cpp
foo/modules/: FooConfig.cmake.in
